# hypermodern-python-practice

./: .coverage  LICENSE  README.md  noxfile.py  pyproject.toml
src/hypermodern_python_practice/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
