[tool.poetry]
name = "hypermodern-python-practice"
version = "0.1.0"
description = "The hypermodern Python project"
license= "MIT"
readme = "README.md"
homepage = "https://github.com/simplythebex/hypermodern-python-practice"
repository = "https://github.com/simplythebex/hypermodern-python-practice"
keywords = ["hypermodern"]
authors = ["simplythebex <becca.jones@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
