[tool.poetry]
name = "hypermodern-python-practice"
version = "0.1.0"
description = "The hypermodern Python project"
license= "MIT"
readme = "README.md"
homepage = "https://github.com/simplythebex/hypermodern-python-practice"
repository = "https://github.com/simplythebex/hypermodern-python-practice"
keywords = ["hypermodern"]
authors = ["simplythebex <becca.jones@live.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
coverage = "^6.1.1"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
hypermodern-python-practice = "src.hypermodern_python_practice.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src.hypermodern_python_practice"]

[tool.coverage.report]
show_missing = true
fail_under = 100